# ExpressionMinimizer

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE.txt  README.md  extending.md  minimizer.hpp
.github/workflows/: ci.yml
include/: TODO.md  sym.hpp
include/callback/: callback.hpp
include/logging/: logging_callback.hpp
include/lsq/: gaussnewton.hpp  levmar.hpp  lsq_base.hpp  nlsdogleg.hpp  subspace2d.hpp
include/minimizer/: amoeba.hpp  anneal.hpp  auglag.hpp  bfgs.hpp  bracketmethod.hpp  brent.hpp  broyden.hpp  detail.hpp  dogleg.hpp  frprmn.hpp  gaussnewton.hpp  golden.hpp  interiorpointlp.hpp  lbfgs.hpp  levmar.hpp  linmin.hpp  lsq_base.hpp  make.hpp  minimizer.hpp  nlsdogleg.hpp  powell.hpp  simplexlp.hpp  subspace2d.hpp  trustregionbase.hpp
include/minimizer/detail/: constexpr_math.hpp
include/rootfind/: broyden.hpp
scripts/: plot_paths.py
src/: playground.cpp
tests/: minimizer_tests.cpp
